--- a/MoneyBank.Forms/ManageLogin.resx
+++ b/MoneyBank.Forms/ManageLogin.resx
@@ -1931,6 +1931,44 @@
         Weu0tKU3JFf1v3/T/w9sM4qOjFxKXgAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="pbPassword.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAARKSURBVFhHtZZ/TNR1GMc/x6EY2GYikmPEBimV/aBaW5tL2mKCjcM0I0ujX6hbhNlqq831i7VZ
+        Nl1Ttqa1/EUioNwlgVzM48ghYIAVKmg/BJLQ2PoDjSkc9+55fz3sDj7fO924z/ZiD8/n/bzfz/fLbZzK
+        XJ99w8hJFNYL5cJx4bQP1uzxLlE3a4a2OR45CUKJ4ImNjUN6egby8l5FwetvGrwgNXu8o8anTdB5jUfb
+        9EdOlvBPUlIyPiz6BK1tHei/MIDBS5dx+d8hA9bs8e6jok9BLWc4q/P0R9scQw5/XM1cnIMaZwPO/t6D
+        8/1/G/Sc78e5nj6c6+1Db9+F631qqM2SGc7SQ+c9hrZJ5NwpDGY9+RS+dzWi67dunBHzlvYO2KvqsGlz
+        Md7dUGTAmr3jcnfmj15Dy5nFMksPIUWXQbRNIqc6OSUVFfZanDh1Fm2/dKK8sgbZOcsRHR1D4wDYsy1Z
+        jgpHLdo7uowZ1vSgly6D6JtKpQnedzZ8DPexNjS1n8SeUgfmpc6n2YDwmhDvp4/39Qao2Vt2CM0yw1l6
+        SN8rpPlnXJ/VNpXaOCfhDuza50BDy09wHK7HE4uyaXRRSNbNEN5Rk5Fpkxk33M0nsGf/IcxJSOTsRu2M
+        tqlUw4KFGdhvd+JIYyu2bt+LqKhpNMnX6f2hhlrO1LqbYa9xgV701Oq1TaW6bcueR6nDibqjP2Ld2+/T
+        gMTp9P5QQ23hW++hUt7CYdcx2JY+x9lurV7bVKp/aW4edh+ohrupHS+uXmcsoNPqoHbVKwXYJw9Q39QG
+        etFTq9U2RWxbthI7Suzy6e/CypcLbnqB3FVrsLOsypinFz212oBflJopFAlDi2y52Ly9BN1//oUVeWuN
+        BQT7DYIluS+heGe5MU8v6Q0J9J4ZkOkXHiN0pqbI32+1wrYt96K66mkMD36Gr3c8ijfWqpvii20Poc65
+        wpinFz3pzQxm6RbIj5+lMHhaAT3hgd7MYJZugQ/SHxHhKeHnMCHezGCWfoGHRdQqtIQJ8WaG+QIPiqhR
+        OBomxJsZ5gukiahBqA8T4s0M8wUe8AldofG2WPDrD8qAtU4zAfFmRvAFKDwSHK/LgrJNU2GxKAPW7Om0
+        AYh36AVE6K2zBGXUOQWFOcY/JwPW7Om0/tA7+AL3S7gzQrAGZbTWis7Pb0PybKsBa/Z02kAiwAzzBe6T
+        p/tuKkZrIkPiqYxG/mPXYK3TTEC8mWG+wPwIeOy3XFsiBCMHpiN/QYwBa51mPPRmhukCC++xYqR8Ojzf
+        TgvJSNmtOLhmlgFrnWY89GaG+QJ3R2L4mxnGKw3FyEF5cgk2kFqnGQ+9mWG+wF2RuLorFp4KeQthgN7M
+        MF8gdQqufBWH4bEnm0ToSW9mmC1QmBRrxaXi23Hly9lhgd7MYJZuAX6ZvPj4vChseWYGtj47udCT3sxg
+        1oQFfEvMFUqFkwK/uUwm9KT33P8zs9V/6VhmNqFBBYkAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="pbUsername.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAHiSURBVFhHxdY7SwNREAXgmIBoIClF8UVAZDeFiF1QLESwWQRtVAIWYqGdv8DGPiIIYpXSQkTt
+        /DOpLARFUVREfMRzYTdMZs8mG5OrwlfkMPfMNYmLiYUd71fy+XwPjMMYdLOZOGjYCJbNwRW8Q9X3BpdQ
+        YGcaoSGD8iQcwDcEi7Uv2GPno9CQQfG+WNTMLutgaKihcAYa/ebaB0ywLo2GGsouRHlcZdal0VBCUQpe
+        RHFcN6xPo6GEogFVHJf5yHpZp0RDCSV9orQV5gJNnw80lFDSBfd+aSsqrE+joYaysiqPo8S6NBpqKHNA
+        PvmaeYYh1qXRkEHhNsR5Fpin4RrrYGgYBcWb8OovYp5ghZ2NQkMGxZNwBHfAlhu3cAxTrIOhoYSyYTiF
+        Vh7FZvYcRlmnRMMAChbhAdiSOB5hmXUHaGjg4AZ8+kXtMF/KLbbDoCEOeNCJ5QHTRd+JUIDBQWjnbY9i
+        Po4Rva/uhYGhE3Go0870vroXGHDBfGbscCeYv466f1T0BUpi2JZDuVNfoKKGbbiWO+XyfjVoU+3LWLuA
+        67qzZNAK7JpnFyiyYRscx1kNXSCXy62zYRuwqxi6QDqdXspms1Ujk8lYEXRjlxe6AH5SMO0rWBL0J0MX
+        +C80/Dte4geFILwz7TfZJwAAAABJRU5ErkJggg==
+</value>
+  </data>
   <metadata name="userDTOBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
